Fixing double border in tables

--- a/app/assets/stylesheets/provider/_fields_definitions.scss
+++ b/app/assets/stylesheets/provider/_fields_definitions.scss
@@ -5,11 +5,10 @@
 
   li {
     background: $background-color-base no-repeat line-height-times(1/2) center image-url("drag-icon.png");
-    border: $border-width solid $border-color;
     margin-bottom: line-height-times(1/2);
     padding: line-height-times(1/2) 0 line-height-times(1/2) line-height-times(1);
-    border-radius: $border-radius;
     overflow: visible !important;
+    @include white-box-shadow;
 
     &.ui-sortable-helper {
       @include box-shadow(0 0 line-height-times(1/2) $box-shadow-color);
