--- a/app/assets/stylesheets/provider/layouts/_main.scss
+++ b/app/assets/stylesheets/provider/layouts/_main.scss
@@ -36,4 +36,9 @@ body {
 @mixin white-box-shadow {
   background-color: white;
   box-shadow: rgba(3, 3, 3, 0.2) 0px 1px 2px 0px;
+
+  // IE 11
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    box-shadow: rgba(3, 3, 3, 0.2) 0px 1px 3px 1px;
+  }
 }
