--- a/app/javascript/src/Dashboard/styles/dashboard.scss
+++ b/app/javascript/src/Dashboard/styles/dashboard.scss
@@ -16,6 +16,7 @@ $font-color: $outerSpaceGray;
   border-radius: $border-radius;
   margin-bottom: 0.2rem;
   margin-top: -0.2rem;
+  padding: 1px;
 
   span {
     margin: 0.5rem;
